Make sure OR/AND links are correctly aligned when following an IF block

--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -389,8 +389,9 @@ td.table__form .rules + .form__group:last-of-type {
         }
     }
 
-    .rule-block--else-if + .rule-links .rule-link--or,
-    .rule-block--and + .rule-links .rule-link--or {
+    .rule-block--if + .rule-links .rule-link--or,
+    .rule-block--and + .rule-links .rule-link--or,
+    .rule-block--else-if + .rule-links .rule-link--or {
         border-left: 4px solid color(gray, lightest);
         margin-left: 20px;
         padding-left: 40px;
